tests/checker/ok/wasi_http_handler.can
home = (Request) => Response {
    "hello"
        -> Body
        -> Response(200 -> Status * Headers())
}
