tests/checker/fail/mixed_worlds_main_and_handler.can
Request => Response {
    Response(Body("") * Headers() * Status(200))
}

Unit => Program {
    "ok" -> Print
}
